# whisper.cpp

examples/cli/: CMakeLists.txt  README.md  mic_cli.cpp
examples/stream/: CMakeLists.txt  ros2_stream.cpp  test_stream.cpp
